--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "aws-amplify": ">1.2.1"
+    "aws-amplify": ">1.2.1",
+    "@aws-amplify/ui-react": ">1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
